fix(quiz): reduce text size on mobile

--- a/src/Components/Questions/Questions.css
+++ b/src/Components/Questions/Questions.css
@@ -25,6 +25,12 @@
   font-weight: bold;
 }
 
+@media screen and (max-width: 650px) {
+  .questionWrapper h1 {
+    font-size: 20px;
+  }
+}
+
 .answerWrapper ul {
   list-style: none;
   margin: 0;
@@ -53,4 +59,10 @@
 .answerChoosed {
   background-color: #6774ff;
   color: #fff;
+}
+
+@media screen and (max-width: 650px) {
+  .oneAnswer {
+    font-size: 12px;
+  }
 }
